Fixed missing background color in page wrapper.

--- a/sidebar.css
+++ b/sidebar.css
@@ -40,6 +40,7 @@
 #page-content-wrapper {
     width: 100%;
     padding: 15px;
+    background-color: #fff;
 }
 
 #wrapper.toggled #page-content-wrapper {
